# arcade

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  highscores.arc
assets/centipede/: centipede_player.txt  mushroom_1.txt  mushroom_2.txt  mushroom_3.txt  shoot.txt  snakecell_down_2.txt  snakecell_down_5.txt  snakehead_down_7.txt  snakehead_left_8.txt
assets/ncurses/: board.txt  centipede_mushroom_4.txt  centipede_snakecell_right_1.txt  centipede_snakehead_right_1.txt  snake_body_horizontal.txt  snake_head_right.txt  snake_head_vertical.txt
assets/nibbler/: food.txt  map.txt  snake_body_horizontal.txt  snake_body_vertical.txt  snake_head_left.txt  snake_head_up.txt
lib/games/: AGame.cpp
lib/games/centipede/: CMakeLists.txt  Centipede.cpp  CentipedeGame.cpp  Makefile  Mushroom.cpp  Player.cpp  Snake.cpp  mushroom.cpp
lib/games/centipede/includes/: Centipede.hpp  CentipedeGame.hpp  Mushroom.hpp  Player.hpp  Snake.hpp
lib/games/includes/: AGame.hpp
lib/games/menu/: CMakeLists.txt  Makefile  Menu.cpp  MenuGame.cpp  MenuItem.cpp
lib/games/menu/includes/: Menu.hpp  MenuGame.hpp  MenuItem.hpp
lib/games/nibbler/: CMakeLists.txt  Food.cpp  Makefile  Nibbler.cpp  NibblerGame.cpp  Snake.cpp  SnakeCell.cpp  nibbler
lib/games/nibbler/includes/: Direction.hpp  Food.hpp  Nibbler.hpp  NibblerGame.hpp  Snake.hpp  SnakeCell.hpp  food.hpp
lib/games/pacman/: CMakeLists.txt  Pacman.cpp
lib/games/pacman/includes/: Pacman.hpp
lib/graphics/ncurses/: CMakeLists.txt  Makefile  Ncurses.cpp  NcursesDisplay.cpp
lib/graphics/ncurses/includes/: Ncurses.hpp  NcursesDisplay.hpp
lib/graphics/sdl2/: CMakeLists.txt  Error.cpp  Makefile  Sdl2.cpp  Sdl2Display.cpp
lib/graphics/sdl2/includes/: Error.hpp  Sdl2.hpp  Sdl2Display.hpp
lib/graphics/sfml/: CMakeLists.txt  Error.cpp  Makefile  Sfml.cpp  SfmlDisplay.cpp
lib/graphics/sfml/includes/: Error.hpp  Sfml.hpp  SfmlDisplay.hpp
src/: Color.cpp  Core.cpp  Error.cpp  Object.cpp  main.cpp
src/Utils/: FileParser.cpp  HighscoreHandler.cpp
src/includes/: Color.hpp  Core.hpp  DLLoader.hpp  DisplayTester.hpp  Error.hpp  Events.hpp  IDisplay.hpp  IDisplayModule.hpp  IGameModule.hpp  Object.hpp  Vector.hpp
src/includes/Interfaces/: IDisplayModule.hpp  IGameModule.hpp
src/includes/Utils/: DLLoader.hpp  FileParser.hpp  HighscoreHandler.hpp
